--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sham's Trading Journal</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Sham's USDJPY Trading Journal 📈</h1>
-
+    <h1>Sham's USDJPY Trading Journal</h1>
+    
     <div class="section">
       <label for="balance">Account Balance ($):</label>
       <input type="number" id="balance" placeholder="Enter balance">
@@ -17,30 +18,38 @@
     </div>
 
     <div class="section checklist">
-      <h2>Entry Checklist ✅</h2>
-      <label><input type="checkbox" class="checklist"> 5 Min EMA Crossover</label>
-      <label><input type="checkbox" class="checklist"> 5 Min MACD Crossover before EMA</label>
-      <label><input type="checkbox" class="checklist"> Pullback candle closed</label>
-      <label><input type="checkbox" class="checklist"> Supertrend active in trade direction</label>
-      <label><input type="checkbox" class="checklist"> Only Asian or London Open trade</label>
+      <h2>Entry Checklist</h2>
+      <div>
+        <input type="checkbox" class="checklist"> 5 Min EMA Crossover
+      </div>
+      <div>
+        <input type="checkbox" class="checklist"> 5 Min MACD Crossover before EMA
+      </div>
+      <div>
+        <input type="checkbox" class="checklist"> Pullback candle closed
+      </div>
+      <div>
+        <input type="checkbox" class="checklist"> Supertrend active in trade direction
+      </div>
+      <div>
+        <input type="checkbox" class="checklist"> Only Asian or London Open trade
+      </div>
     </div>
 
     <div class="section">
-      <h2>Trade Outcome 🏁</h2>
       <button id="wonButton" disabled>Won</button>
       <button id="lostButton" disabled>Lost</button>
     </div>
 
     <div class="section">
-      <textarea id="comments" placeholder="Comments (entry reason, notes...)"></textarea>
+      <textarea id="comments" placeholder="Enter trade comments..."></textarea>
       <button id="submitTrade" disabled>Submit Trade</button>
     </div>
 
-    <div class="section log">
-      <h2>Trade Log 📜</h2>
+    <div class="section">
+      <h2>Trade Log</h2>
       <div id="tradeHistory"></div>
     </div>
-
   </div>
 
   <script type="module" src="firebase-config.js"></script>
